--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "bootstrap-vue": "^2.0.0-rc.2",
+    "lodash": "^4.17.5",
     "vue": "^2.5.13"
   },
   "devDependencies": {
